<resources>
    <!--Constants-->
    <string name="unit_system" translatable="false">UNIT_SYSTEM</string>
    <!--User text-->
    <string name="app_name">Forecast Application</string>
    <string name="warsaw_city">Warsaw</string>
    <string name="today">Today</string>
    <string name="days_7">7 Days</string>
    <string name="settings">Settings</string>
    <string name="loading_text">Loading</string>
    <string name="day_headline">Day</string>
    <string name="night_headline">Night</string>
    <string name="has_precipitation">Expected precipitation</string>
    <string name="no_precipitation">No precipitation</string>
    <string name="image_day_description">Weather icon during day</string>
    <string name="image_night_description">Weather icon during night</string>
</resources>
