<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/currentWeatherFragment"
        android:icon="@drawable/ic_today"
        android:title="@string/today" />
    <item
        android:id="@+id/futureListWeatherFragment"
        android:icon="@drawable/ic_calendar_week"
        android:title="@string/days_7" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

   <!-- <item
        android:id="@+id/location_search"
        android:title="Wyszukiwanie"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />-->


</menu>