<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.weather.current.CurrentWeatherFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/constant_labels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_label_day,tv_label_night,
        imageView_condition_day,imageView_condition_night,textView_temperature_day,textView_temperature_night,
        textView_precipitation_day,textView_precipitation_night,
        textView_condition_day,textView_condition_night" />


    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="progressBar_loading, textView_loading" />

    <ProgressBar
        android:id="@+id/progressBar_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/loading_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressBar_loading"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_label_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintBottom_toTopOf="@id/textView_condition_day"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="@id/textView_condition_day"
        app:layout_constraintVertical_bias="0.017"
        android:text="@string/day_headline" />

    <TextView
        android:id="@+id/textView_condition_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toTopOf="@id/textView_temperature_day"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="@id/textView_temperature_day"
        app:layout_constraintVertical_bias="0.017" />


    <ImageView
        android:id="@+id/imageView_condition_day"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233"
        app:layout_constraintWidth_percent="0.25"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_day_description"/>

    <TextView
        android:id="@+id/textView_temperature_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_condition_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_condition_day"
        app:layout_constraintVertical_bias="1.0"
        tools:text="20.0°C" />

    <TextView
        android:id="@+id/textView_precipitation_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/textView_temperature_day"
        app:layout_constraintTop_toBottomOf="@+id/textView_temperature_day"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/has_precipitation" />

    <ImageView
        android:id="@+id/imageView_condition_night"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.80"
        app:layout_constraintWidth_percent="0.25"
        android:contentDescription="@string/image_night_description"/>

    <TextView
        android:id="@+id/tv_label_night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintBottom_toTopOf="@id/textView_condition_night"
        android:text="@string/night_headline"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="@id/textView_condition_night"
        app:layout_constraintVertical_bias="0.017"
        tools:text="Noc" />

    <TextView
        android:id="@+id/textView_condition_night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toTopOf="@+id/textView_temperature_night"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="@id/textView_temperature_night"
        app:layout_constraintVertical_bias="0.017" />


    <TextView
        android:id="@+id/textView_temperature_night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_condition_night"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_condition_night"
        app:layout_constraintVertical_bias="1.0"
        tools:text="2.0°C" />

    <TextView
        android:id="@+id/textView_precipitation_night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/textView_temperature_night"
        app:layout_constraintTop_toBottomOf="@+id/textView_temperature_night"
        app:layout_constraintVertical_bias="0.0"
        android:text="@string/no_precipitation" />


</androidx.constraintlayout.widget.ConstraintLayout>